// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardCard component 1 renders as expected 1`] = `
<div
  className="bx--module bx--module--single bx--tile dashboard-card dashboard-card__critical"
  critical={1}
  healthy={1}
  table={
    Array [
      Object {
        "clusterIP": "1.1.1.1",
        "percentage": 0,
        "resourceName": "auth-idp-platform-auth-cert-gen-h2rt4",
        "status": "critical",
      },
      Object {
        "clusterIP": "",
        "percentage": 0,
        "resourceName": "db2-stock-trader-ibm-db2oltp-dev-5b77c44d4-b7tbz",
        "status": "warning",
      },
      Object {
        "clusterIP": "",
        "percentage": 0,
        "resourceName": "db2-stock-trader-ibm-db2oltp-dev-5b77c44d4-b7tbz",
        "status": "healthy",
      },
    ]
  }
  title="unit test"
  type="pods"
  warning={1}
>
  <div
    className="bx--module__inner"
  >
    <div
      className="bx--module__header dashboard-card-header__critical"
    >
      <h1
        className="bx--module__title"
      >
        <div
          className="dashboard-card-header__icon"
        >
          unit test
          <svg
            alt="table-status-icon-critical"
            aria-label="table-status-icon-critical"
            className="dashboard-card-header__icon__critical"
            fill={undefined}
            fillRule="evenodd"
            height="16"
            name="icon--error--glyph"
            role="img"
            style={undefined}
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              table-status-icon-critical
            </title>
            <path
              d="M8 0C3.6 0 0 3.6 0 8s3.6 8 8 8 8-3.6 8-8-3.6-8-8-8zM5.1 13.3L3.5 12 11 2.6l1.5 1.2-7.4 9.5z"
            />
          </svg>
        </div>
      </h1>
    </div>
    <div
      className="bx--module__content dashboard-card-orb-summary"
    >
      <div
        className="dashboard-overview"
      >
        <div>
          <a
            href="undefined/pods?filters={\\"status\\":[\\"Failed\\",\\"Not running\\"]}"
            onClick={[Function]}
          >
            <div
              className="dashboard-count "
            >
              <div
                className="dashboard-orb"
              >
                <div
                  className="dashboard-orb dashboard-orb__inner dashboard-orb__critical"
                >
                  1
                </div>
              </div>
              <div
                className="dashboard-card-text"
              >
                <ul
                  className="dashboard-card-text-list"
                >
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Failed
                  </li>
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Not running
                  </li>
                </ul>
              </div>
            </div>
          </a>
          <a
            href="undefined/pods?filters={\\"status\\":[\\"Pending\\"]}"
            onClick={[Function]}
          >
            <div
              className="dashboard-count "
            >
              <div
                className="dashboard-orb"
              >
                <div
                  className="dashboard-orb dashboard-orb__inner dashboard-orb__warning"
                >
                  1
                </div>
              </div>
              <div
                className="dashboard-card-text"
              >
                <ul
                  className="dashboard-card-text-list"
                >
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Pending
                  </li>
                </ul>
              </div>
            </div>
          </a>
          <a
            href="undefined/pods?filters={\\"status\\":[\\"Running\\",\\"Succeeded\\"]}"
            onClick={[Function]}
          >
            <div
              className="dashboard-count "
            >
              <div
                className="dashboard-orb"
              >
                <div
                  className="dashboard-orb dashboard-orb__inner dashboard-orb__healthy"
                >
                  1
                </div>
              </div>
              <div
                className="dashboard-card-text"
              >
                <ul
                  className="dashboard-card-text-list"
                >
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Running
                  </li>
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Succeeded
                  </li>
                </ul>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
    <div
      className="bx--module__content dashboard-card-table-body"
    >
      <div
        className="dashboard-card-separator-link"
      >
        <a
          href="undefined/pods"
          onClick={[Function]}
        >
          View All
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`DashboardCard component 2 renders as expected 1`] = `
<div
  className="bx--module bx--module--single bx--tile dashboard-card dashboard-card__warning"
  critical={0}
  healthy={0}
  table={
    Array [
      Object {
        "clusterIP": "",
        "percentage": 0,
        "resourceName": "db2-stock-trader-ibm-db2oltp-dev-5b77c44d4-b7tbz",
        "status": "warning",
      },
    ]
  }
  title="unit test 2"
  type="pods"
  warning={1}
>
  <div
    className="bx--module__inner"
  >
    <div
      className="bx--module__header dashboard-card-header__warning"
    >
      <h1
        className="bx--module__title"
      >
        <div
          className="dashboard-card-header__icon"
        >
          unit test 2
          <svg
            alt="table-status-icon-warning"
            aria-label="table-status-icon-warning"
            className="dashboard-card-header__icon__warning"
            fill={undefined}
            fillRule="evenodd"
            height="16"
            name="icon--warning--glyph"
            role="img"
            style={undefined}
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              table-status-icon-warning
            </title>
            <path
              d="M8 1L0 15h16L8 1zm-.8 5h1.5v1.4L8.3 11h-.8l-.4-3.6V6h.1zm.8 8c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1z"
            />
          </svg>
        </div>
      </h1>
    </div>
    <div
      className="bx--module__content dashboard-card-orb-summary"
    >
      <div
        className="dashboard-overview"
      >
        <div>
          <a
            href="undefined/pods?filters={\\"status\\":[\\"Failed\\",\\"Not running\\"]}"
            onClick={[Function]}
          >
            <div
              className="dashboard-count "
            >
              <div
                className="dashboard-orb"
              >
                <div
                  className="dashboard-orb dashboard-orb__inner dashboard-orb__gray"
                >
                  0
                </div>
              </div>
              <div
                className="dashboard-card-text dashboard-card-text__gray"
              >
                <ul
                  className="dashboard-card-text-list"
                >
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Failed
                  </li>
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Not running
                  </li>
                </ul>
              </div>
            </div>
          </a>
          <a
            href="undefined/pods?filters={\\"status\\":[\\"Pending\\"]}"
            onClick={[Function]}
          >
            <div
              className="dashboard-count "
            >
              <div
                className="dashboard-orb"
              >
                <div
                  className="dashboard-orb dashboard-orb__inner dashboard-orb__warning"
                >
                  1
                </div>
              </div>
              <div
                className="dashboard-card-text"
              >
                <ul
                  className="dashboard-card-text-list"
                >
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Pending
                  </li>
                </ul>
              </div>
            </div>
          </a>
          <a
            href="undefined/pods?filters={\\"status\\":[\\"Running\\",\\"Succeeded\\"]}"
            onClick={[Function]}
          >
            <div
              className="dashboard-count "
            >
              <div
                className="dashboard-orb"
              >
                <div
                  className="dashboard-orb dashboard-orb__inner dashboard-orb__gray"
                >
                  0
                </div>
              </div>
              <div
                className="dashboard-card-text dashboard-card-text__gray"
              >
                <ul
                  className="dashboard-card-text-list"
                >
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Running
                  </li>
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Succeeded
                  </li>
                </ul>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
    <div
      className="bx--module__content dashboard-card-table-body"
    >
      <div
        className="dashboard-card-separator-link"
      >
        <a
          href="undefined/pods"
          onClick={[Function]}
        >
          View All
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`DashboardCard component 3 renders as expected 1`] = `
<div
  className="bx--module bx--module--single bx--tile dashboard-card dashboard-card__healthy"
  critical={0}
  healthy={1}
  table={
    Array [
      Object {
        "clusterIP": "",
        "percentage": 0,
        "resourceName": "db2-stock-trader-ibm-db2oltp-dev-5b77c44d4-b7tbz",
      },
    ]
  }
  title="unit test 3"
  type="pods"
  warning={0}
>
  <div
    className="bx--module__inner"
  >
    <div
      className="bx--module__header dashboard-card-header__healthy"
    >
      <h1
        className="bx--module__title"
      >
        <div
          className="dashboard-card-header__icon"
        >
          unit test 3
        </div>
      </h1>
    </div>
    <div
      className="bx--module__content dashboard-card-orb-summary"
    >
      <div
        className="dashboard-overview"
      >
        <div>
          <a
            href="undefined/pods?filters={\\"status\\":[\\"Failed\\",\\"Not running\\"]}"
            onClick={[Function]}
          >
            <div
              className="dashboard-count "
            >
              <div
                className="dashboard-orb"
              >
                <div
                  className="dashboard-orb dashboard-orb__inner dashboard-orb__gray"
                >
                  0
                </div>
              </div>
              <div
                className="dashboard-card-text dashboard-card-text__gray"
              >
                <ul
                  className="dashboard-card-text-list"
                >
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Failed
                  </li>
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Not running
                  </li>
                </ul>
              </div>
            </div>
          </a>
          <a
            href="undefined/pods?filters={\\"status\\":[\\"Pending\\"]}"
            onClick={[Function]}
          >
            <div
              className="dashboard-count "
            >
              <div
                className="dashboard-orb"
              >
                <div
                  className="dashboard-orb dashboard-orb__inner dashboard-orb__gray"
                >
                  0
                </div>
              </div>
              <div
                className="dashboard-card-text dashboard-card-text__gray"
              >
                <ul
                  className="dashboard-card-text-list"
                >
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Pending
                  </li>
                </ul>
              </div>
            </div>
          </a>
          <a
            href="undefined/pods?filters={\\"status\\":[\\"Running\\",\\"Succeeded\\"]}"
            onClick={[Function]}
          >
            <div
              className="dashboard-count "
            >
              <div
                className="dashboard-orb"
              >
                <div
                  className="dashboard-orb dashboard-orb__inner dashboard-orb__healthy"
                >
                  1
                </div>
              </div>
              <div
                className="dashboard-card-text"
              >
                <ul
                  className="dashboard-card-text-list"
                >
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Running
                  </li>
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Succeeded
                  </li>
                </ul>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
    <div
      className="bx--module__content dashboard-card-table-body"
    >
      <div
        className="dashboard-card-separator-link"
      >
        <a
          href="undefined/pods"
          onClick={[Function]}
        >
          View All
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`DashboardCard component 4 renders as expected 1`] = `
<div
  className="bx--module bx--module--single bx--tile dashboard-card dashboard-card__healthy"
  critical={0}
  healthy={0}
  table={Array []}
  title="unit test 4"
  type="pods"
  warning={0}
>
  <div
    className="bx--module__inner"
  >
    <div
      className="bx--module__header dashboard-card-header__healthy"
    >
      <h1
        className="bx--module__title"
      >
        <div
          className="dashboard-card-header__icon"
        >
          unit test 4
        </div>
      </h1>
    </div>
    <div
      className="bx--module__content dashboard-card-orb-summary"
    >
      <div
        className="dashboard-overview"
      >
        <div>
          <a
            href="undefined/pods?filters={\\"status\\":[\\"Failed\\",\\"Not running\\"]}"
            onClick={[Function]}
          >
            <div
              className="dashboard-count "
            >
              <div
                className="dashboard-orb"
              >
                <div
                  className="dashboard-orb dashboard-orb__inner dashboard-orb__gray"
                >
                  0
                </div>
              </div>
              <div
                className="dashboard-card-text dashboard-card-text__gray"
              >
                <ul
                  className="dashboard-card-text-list"
                >
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Failed
                  </li>
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Not running
                  </li>
                </ul>
              </div>
            </div>
          </a>
          <a
            href="undefined/pods?filters={\\"status\\":[\\"Pending\\"]}"
            onClick={[Function]}
          >
            <div
              className="dashboard-count "
            >
              <div
                className="dashboard-orb"
              >
                <div
                  className="dashboard-orb dashboard-orb__inner dashboard-orb__gray"
                >
                  0
                </div>
              </div>
              <div
                className="dashboard-card-text dashboard-card-text__gray"
              >
                <ul
                  className="dashboard-card-text-list"
                >
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Pending
                  </li>
                </ul>
              </div>
            </div>
          </a>
          <a
            href="undefined/pods?filters={\\"status\\":[\\"Running\\",\\"Succeeded\\"]}"
            onClick={[Function]}
          >
            <div
              className="dashboard-count "
            >
              <div
                className="dashboard-orb"
              >
                <div
                  className="dashboard-orb dashboard-orb__inner dashboard-orb__gray"
                >
                  0
                </div>
              </div>
              <div
                className="dashboard-card-text dashboard-card-text__gray"
              >
                <ul
                  className="dashboard-card-text-list"
                >
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Running
                  </li>
                  <li
                    className="dashboard-card-text-list-item"
                  >
                    Succeeded
                  </li>
                </ul>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
    <div
      className="bx--module__content dashboard-card-table-body"
    >
      <div
        className="dashboard-card-separator-link"
      >
        <a
          href="undefined/pods"
          onClick={[Function]}
        >
          View All
        </a>
      </div>
    </div>
  </div>
</div>
`;
